Fix sidebar pusher width overflow

--- a/src/app/app-dev/components/sidebar/style.scss
+++ b/src/app/app-dev/components/sidebar/style.scss
@@ -1,3 +1,7 @@
 sidebar {
 
 }
+
+sidebar.visible ~ .pusher {
+	width: calc(100% - 350px);
+}
